@@ -1,0 +1,58 @@
+# Copyright 2015 Free Software Foundation, Inc.
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 3 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+load_lib "pascal.exp"
+
+standard_testfile .pas
+
+if {[gdb_compile_pascal "${srcdir}/${subdir}/${srcfile}" "${binfile}" executable [list debug class]] != "" } {
+    untested $testfile.exp
+    return -1
+}
+
+clean_restart ${testfile}
+set bp_location [gdb_get_line_number "set breakpoint here"]
+
+if { ![runto ${srcfile}:${bp_location}] } {
+    return 0
+}
+
+# We are now inside CHECK method.
+gdb_test "p X" " = 67"
+gdb_test "p B.X" " = 11"
+gdb_test "p Y" " = 33"
+gdb_test "p B.Y" " = 35"
+# As A is global, we can also check its value.
+gdb_test "p A.X" " = 67"
+gdb_test "p A.Y" " = 33"
+# Now test lowercase version.
+gdb_test "p x" " = 67"
+gdb_test "p y" " = 33"
+gdb_test "p B.x" " = 11"
+gdb_test "p B.y" " = 35"
+# As A is global, we can also check its value, with lowercase.
+gdb_test "p A.x" " = 67"
+gdb_test "p A.y" " = 33"
+# Also test lowercase class names.
+gdb_test "p b.X" " = 11"
+gdb_test "p b.x" " = 11"
+gdb_test "p b.Y" " = 35"
+gdb_test "p b.y" " = 35"
+gdb_test "p a.X" " = 67"
+gdb_test "p a.x" " = 67"
+gdb_test "p a.Y" " = 33"
+gdb_test "p a.y" " = 33"
+
+gdb_exit
